--- a/FlyingBirdGame/app/src/main/AndroidManifest.xml
+++ b/FlyingBirdGame/app/src/main/AndroidManifest.xml
@@ -9,9 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FlyBirdGame">
+        <activity android:name=".ResultActivity"
+            android:screenOrientation="landscape"
+            ></activity>
         <activity
             android:name=".GameActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="landscape">
